2008-09-12  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Fixed bug in override completion.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Autotools/Autotools.mdp, gtk-gui/generated.cs,
	  gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/CSharpBinding.CompilerOptionsPanelWidget.cs,
	  gtk-gui/CSharpBinding.FormattingPanelWidget.cs, gtk-gui/gui.stetic:
	  Updated generated code.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CompilerOptionsPanelWidget.cs, Gui/CSharpTextEditorCompletion.cs,
	  Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs: Track api
	  changes.

2008-09-11  Mike Krüger <mkrueger@novell.com> 

	* Parser/NRefactoryParser.cs: Worked on fold information update.

2008-09-10  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: Added missing search type.

2008-09-10  Mike Krüger <mkrueger@novell.com> 

	* Parser/NRefactoryParser.cs: recognizing using/namespace import
	  differences

2008-09-10  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryDocumentMetaInformation.cs, Parser/DomParser.cs,
	  Parser/NRefactoryParser.cs: Changed compilation unit/document meta
	  information interface.

2008-09-09  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Added duplicate namespace filter.

2008-09-09  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs, Parser/NRefactoryParser.cs: Some changes caused
	  by interface changes.

2008-09-08  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs, Parser/NRefactoryParser.cs: Fixed some issues
	  found by unit testing.

2008-09-05  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Parser/DomParser.cs,
	  Parser/NRefactoryParser.cs: Worked on dom/refactoring.

2008-09-05  Mike Krüger <mkrueger@novell.com> 

	* Parser/NRefactoryParser.cs: fixed bug with namespace resolving.

2008-09-04  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: Fixed inner type bug.
