@@ -1,5 +1,10 @@
 2008-09-12  Mike Krüger <mkrueger@novell.com> 
 
+	* Gui/NewOverrideCompletionData.cs, Gui/CSharpTextEditorCompletion.cs:
+	  Worked on override completion.
+
+2008-09-12  Mike Krüger <mkrueger@novell.com> 
+
 	* Gui/CSharpTextEditorCompletion.cs: Fixed bug in override completion.
 
 2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 
